--- a/pre-registration/pre-registration-datasync-service/pom.xml
+++ b/pre-registration/pre-registration-datasync-service/pom.xml
@@ -11,6 +11,7 @@
 	</parent>
 
 	<artifactId>pre-registration-datasync-service</artifactId>
+	<version>1.2.1-java21-SNAPSHOT</version>
 	<name>pre-registration-datasync-service</name>
 
 	<properties>
