--- a/pre-registration/pre-registration-application-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/main/resources/application.properties
@@ -33,7 +33,7 @@ appointmentResourse.url: ${mosip.base.url}/preregistration/v1
 audit.service.contextpath: auditmanager
 audit.service.env: http://kernel-auditmanager-service
 audit.url: ${mosip.base.url}/v1/auditmanager/audits
-auth-token-generator.rest.issuerUrl:https://iam.dev3.mosip.net/auth/realms/mosip
+auth-token-generator.rest.issuerUrl:https://iam.dev.mosip.net/auth/realms/mosip
 auth.server.admin.validate.url:${mosip.base.url}/v1/authmanager/authorize/admin/validateToken
 auth.server.validate.url: ${mosip.base.url}/v1/authmanager/authorize/admin/validateToken
 batch.appointment.cancel: ${mosip.base.url}/preregistration/v1/internal/applications/appointment/{preRegistrationId}
@@ -79,7 +79,7 @@ hibernate.show_sql: false
 holiday.exceptional.url: ${mosip.base.url}/v1/masterdata/exceptionalholidays/
 holiday.url: ${mosip.base.url}/v1/masterdata/getregistrationcenterholidays/
 javax.persistence.jdbc.driver: org.postgresql.Driver
-javax.persistence.jdbc.password: mosip123
+javax.persistence.jdbc.password: OfUQvf4kUK
 javax.persistence.jdbc.url=jdbc:postgresql://api-internal.dev.mosip.net:5432/mosip_prereg
 javax.persistence.jdbc.user: postgres
 kernel.auth.contextpath: authmanager
@@ -293,7 +293,7 @@ preregistration.workflow.documentupload: true/false
 qrversion: V1
 regCenter.url: ${mosip.base.url}/v1/masterdata/registrationcenters
 resource.template.url: ${mosip.base.url}/v1/masterdata/templates
-secretKey: 
+secretKey: 0xUtDcxYE8rfYMc6
 sendOtp.resource.url: ${mosip.base.url}/v1/authmanager
 server.max-http-request-header-size: 10000000
 sms.acknowledgement.template: SMS-Acknowledgement
@@ -422,7 +422,7 @@ mosip.lostuin.applicationdetails.ara= \u0627\u0644\u062D\u062C\u0632 \u0644\u062
 
 # To generate token from keycloak. Use by kernel auth adapter.
 mosip.iam.adapter.clientid=mosip-prereg-client
-mosip.iam.adapter.clientsecret=
+mosip.iam.adapter.clientsecret= 0xUtDcxYE8rfYMc6
 mosip.iam.adapter.appid=prereg
 
 # URL to get new Auth Token from OIDC provider & to do online validation of auth token with OIDC provider.
