--- a/pre-registration/pre-registration-datasync-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-datasync-service/src/main/resources/application.properties
@@ -26,13 +26,13 @@ mosip.preregistration.demographic.id.create=mosip.pre-registration.demographic.c
 mosip.preregistration.demographic.id.update=mosip.pre-registration.demographic.update
 mosip.preregistration.demographic.id.retrieve.date=mosip.pre-registration.demographic.retrieve.date
 appId: prereg
-mosip.base.url=https://api-internal.qa4.mosip.net
+mosip.base.url=https://api-internal.dev1.mosip.net
 application.id: pre-registration
 appointmentResourse.url: ${mosip.base.url}/preregistration/v1
 audit.service.contextpath: auditmanager
 audit.service.env: http://kernel-auditmanager-service
 audit.url: ${mosip.base.url}/v1/auditmanager/audits
-auth-token-generator.rest.issuerUrl:https://iam.qa4.mosip.net/auth/realms/mosip
+auth-token-generator.rest.issuerUrl:https://iam.dev1.mosip.net/auth/realms/mosip
 auth.server.admin.validate.url:${mosip.base.url}/v1/authmanager/authorize/admin/validateToken
 auth.server.validate.url: ${mosip.base.url}/v1/authmanager/authorize/admin/validateToken
 batch.appointment.cancel: ${mosip.base.url}/preregistration/v1/internal/applications/appointment/{preRegistrationId}
@@ -82,8 +82,8 @@ holiday.url: ${mosip.base.url}/v1/masterdata/getregistrationcenterholidays/
 
 
 javax.persistence.jdbc.driver: org.postgresql.Driver
-javax.persistence.jdbc.password: 
-javax.persistence.jdbc.url=jdbc:postgresql://api-internal.qa4.mosip.net:5432/mosip_prereg?useSSL=false
+javax.persistence.jdbc.password: aRWP1G52uu
+javax.persistence.jdbc.url=jdbc:postgresql://api-internal.dev1.mosip.net:5432/mosip_prereg
 javax.persistence.jdbc.user: postgres
 
 kernel.auth.contextpath: authmanager
@@ -380,7 +380,7 @@ preregistration.workflow.documentupload: true/false
 qrversion: V1
 regCenter.url: ${mosip.base.url}/v1/masterdata/registrationcenters
 resource.template.url: ${mosip.base.url}/v1/masterdata/templates
-secretKey: 
+secretKey: lJmGIMqcfgsZiHh9
 sendOtp.resource.url: ${mosip.base.url}/v1/authmanager
 server.max-http-request-header-size: 10000000
 sms.acknowledgement.template: SMS-Acknowledgement
@@ -420,7 +420,7 @@ mosip.iam.adapter.clientsecret.pre-registration-datasync-service=
 mosip.iam.adapter.appid.pre-registration-datasync-service=registrationclient
 
 # URL to get new Auth Token from OIDC provider & to do online validation of auth token with OIDC provider.
-auth.server.admin.issuer.uri=https://iam.qa4.mosip.net/auth/realms/
+auth.server.admin.issuer.uri=https://iam.dev1.mosip.net/auth/realms/
 
 # Map to find the realm for the inputted appid to get the token from OIDC provider.
 mosip.kernel.auth.appids.realm.map={prereg:'mosip',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
@@ -433,4 +433,14 @@ auth.server.admin.allowed.audience=mosip-regproc-client,mosip-prereg-client,mosi
 mosip.security.authentication.provider.beans.list.pre-registration-application-service=customJWTAuthProvider
 mosip.security.authentication.provider.beans.list.pre-registration-booking-service=customJWTAuthProvider
 
+mosip.preregistration.anonymous-profile-username:admin
+
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+prereg.auth.jwt.audience = "account";
+mosip.lang.traslate.adapter.impl.basepackage = io.mosip.kernel.transliteration.icu4j
+mosip.preregistration.captcha.resourse.url=${mosip.base.url}/preregistration/v1/captcha/validatecaptcha
+prereg.auth.jwt.secret=Yn2kjibddFAWtnPJ2AFlL8WXmohJMCvigQggaEypa5E=
+prereg.auth.jwt.token.expiration=1800
+prereg.auth.jwt.token.roles=INDIVIDUAL
+prereg.auth.jwt.scope = PRE-REGISTRATION;
+mosip.preregistration.captcha.enable=false
