--- a/pre-registration/pre-registration-batchjob/src/main/resources/bootstrap.properties
+++ b/pre-registration/pre-registration-batchjob/src/main/resources/bootstrap.properties
@@ -11,3 +11,4 @@ health.config.enabled=false
 
 server.port=9097
 mosip.preregistration.batchjob.id.sync=mosip.preregistration.booking.availability.sync.id
+spring.batch.job.enabled=false
