--- a/apitest/src/main/resources/preReg/AddLostUinApplication/AddLostUinApplication.yml
+++ b/apitest/src/main/resources/preReg/AddLostUinApplication/AddLostUinApplication.yml
@@ -32,14 +32,13 @@ AddLostUinApplication:
       output: '{
    "errors": [
     {
-      "errorCode": "PRG_CORE_REQ_014"
+      "errorCode": "PRG_PAM_CORE_001"
     }
   ]
 }'
    Prereg_AddLostUinApplication_invalid_lang_code:
       endPoint: /preregistration/v1/applications/lostuin
       role: batch
-      templateFields: ["langCode"]
       restMethod: post
       inputTemplate: preReg/AddLostUinApplication/addLostUinApplication
       outputTemplate: preReg/error
@@ -50,8 +49,11 @@ AddLostUinApplication:
   "id": "mosip.pre-registration.lostuin.create"
 }'
       output: '{
-  "bookingType": "LOST_FORGOTTEN_UIN",
-  "applicationStatusCode": "SUBMITTED"
+   "errors": [
+    {
+      "errorCode": "PRG_CORE_REQ_014"
+    }
+  ]
 }'
    Prereg_AddLostUinApplication_without_version:
       endPoint: /preregistration/v1/applications/lostuin
@@ -69,7 +71,7 @@ AddLostUinApplication:
       output: '{
    "errors": [
     {
-      "errorCode": "PRG_CORE_REQ_014"
+      "errorCode": "PRG_CORE_REQ_002"
     }
   ]
 }'
@@ -89,7 +91,7 @@ AddLostUinApplication:
       output: '{
    "errors": [
     {
-      "errorCode": "PRG_CORE_REQ_014"
+      "errorCode": "PRG_CORE_REQ_002"
     }
   ]
 }'
@@ -109,7 +111,7 @@ AddLostUinApplication:
       output: '{
    "errors": [
     {
-      "errorCode": "PRG_CORE_REQ_014"
+      "errorCode": "PRG_CORE_REQ_002"
     }
   ]
 }'
@@ -165,7 +167,7 @@ AddLostUinApplication:
       output: '{
    "errors": [
     {
-      "errorCode": "PRG_CORE_REQ_014"
+      "errorCode": "PRG_CORE_REQ_003"
     }
   ]
 }'
