--- a/apitest/src/main/resources/preReg/DeleteAllDocForaPRID/DeleteAllDocForaPRID.yml
+++ b/apitest/src/main/resources/preReg/DeleteAllDocForaPRID/DeleteAllDocForaPRID.yml
@@ -23,7 +23,7 @@ DeleteAllDocForaPRID:
       output: '{
    "errors": [
     {
-      "errorCode": "PRG_PAM_APP_005",
+      "errorCode": "PRG_PAM_APP_005"
     }
   ]
 }'
