--- a/apitest/src/main/resources/preReg/bookAppointment/bookAppointment.yml
+++ b/apitest/src/main/resources/preReg/bookAppointment/bookAppointment.yml
@@ -639,7 +639,7 @@ BookAppointment:
       output: '{
    "errors": [
     {
-      "errorCode": "PRG_CORE_REQ_013"
+      "errorCode": "PRG_BOOK_RCI_031"
       
     }
   ]
@@ -664,7 +664,7 @@ BookAppointment:
       output: '{
    "errors": [
     {
-      "errorCode": "PRG_CORE_REQ_013"
+      "errorCode": "PRG_CORE_REQ_015"
       
     }
   ]
