--- a/apitest/src/main/resources/preReg/CancelAppointment/CancelAppointment.yml
+++ b/apitest/src/main/resources/preReg/CancelAppointment/CancelAppointment.yml
@@ -24,7 +24,7 @@ CancelAppointment:
       output: '{
    "errors": [
     {
-      "errorCode": "PRG_APP_013"
+      "errorCode": "PRG_BOOK_RCI_013"
     }
   ]
 }'
@@ -41,7 +41,7 @@ CancelAppointment:
       output: '{
    "errors": [
     {
-      "errorCode": "PRG_APP_013"
+      "errorCode": "PRG_BOOK_RCI_013"
     }
   ]
 }'
