--- a/pre-registration/pre-registration-datasync-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-datasync-service/src/main/resources/application.properties
@@ -444,3 +444,16 @@ prereg.auth.jwt.token.expiration=1800
 prereg.auth.jwt.token.roles=INDIVIDUAL
 prereg.auth.jwt.scope = PRE-REGISTRATION;
 mosip.preregistration.captcha.enable=false
+
+pre.reg.login.otp.validation-attempt-threshold: 10
+registrationcenter.centerdetail.rest.uri=${mosip.base.url}/v1/masterdata/registrationcenters
+mosip.preregistration.document.update.docrefId.id=mosip.preregistration.docrefId.update
+mosip.preregistration.applications.status.get = mosip.preregistration.applications.status
+mosip.preregistration.applications.details.get = mosip.preregistration.applications.detail.info
+mosip.preregistration.applications.all.get = mosip.preregistration.applications.all
+mosip.preregistration.uispec.latest=mosip.preregistration.uispec.latest
+mosip.preregistration.uispec.all=mosip.preregistration.uispec.all
+preregistration.cookie.contextpath=/preregistration/
+mosip.preregistration.appointment.getavailablity.url=${mosip.base.url}/preregistration/v1/appointment/availability/{registrationCenterId}
+mosip.preregistration.appointment.book.url=${mosip.base.url}/preregistration/v1/appointment/{preRegistrationId}
+mosip.preregistration.appointment.multi.book.url=${mosip.base.url}/preregistration/v1/appointment
