--- a/pre-registration/pre-registration-datasync-service/pom.xml
+++ b/pre-registration/pre-registration-datasync-service/pom.xml
@@ -22,7 +22,20 @@
 		<kernel.keymanager.version>1.2.1-java21-SNAPSHOT</kernel.keymanager.version>
 		<kernel.ref.idobjectvalidator.version>1.2.1-java21-SNAPSHOT</kernel.ref.idobjectvalidator.version>
 		<kernel.transliteration.icu4j.version>1.2.1-java21-SNAPSHOT</kernel.transliteration.icu4j.version>
+		<kernel.bom.version>1.2.1-java21-SNAPSHOT</kernel.bom.version>
 	</properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>io.mosip.kernel</groupId>
+				<artifactId>kernel-bom</artifactId>
+				<version>${kernel.bom.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 		<dependency>
