--- a/pre-registration/pom.xml
+++ b/pre-registration/pom.xml
@@ -118,6 +118,7 @@
 		<kernel.bom.version>1.2.1-java21-SNAPSHOT</kernel.bom.version>
 		<kernel.core.version>1.2.1-java21-SNAPSHOT</kernel.core.version>
 		<pre.registration.core.version>1.2.1-java21-SNAPSHOT</pre.registration.core.version>
+		<spring-cloud.version>2020.0.4</spring-cloud.version>
 	</properties>
 	
 	<modules>
@@ -143,6 +144,13 @@
 				<version>${lombok.version}</version>
 				<scope>provided</scope>
 			</dependency>
+			<dependency>
+      			<groupId>org.springframework.cloud</groupId>
+      		    <artifactId>spring-cloud-dependencies</artifactId>
+     		    <version>${spring-cloud.version}</version>
+      		    <type>pom</type>
+      		    <scope>import</scope>
+     	 	</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
