--- a/pre-registration/pre-registration-application-service/pom.xml
+++ b/pre-registration/pre-registration-application-service/pom.xml
@@ -28,6 +28,7 @@
 		<pre.registration.core.version>1.2.1-java21-SNAPSHOT</pre.registration.core.version>
 		<kernel.bom.version>1.2.1-java21-SNAPSHOT</kernel.bom.version>
 		<lombok.version>1.18.30</lombok.version>
+		<spring-cloud.version>2020.0.4</spring-cloud.version>
 	</properties>
 
 	<dependencyManagement>
@@ -45,6 +46,13 @@
 				<version>${lombok.version}</version>
 				<scope>provided</scope>
 			</dependency>
+			<dependency>
+      			<groupId>org.springframework.cloud</groupId>
+      		    <artifactId>spring-cloud-dependencies</artifactId>
+     		    <version>${spring-cloud.version}</version>
+      		    <type>pom</type>
+      		    <scope>import</scope>
+     	 	</dependency>
 		</dependencies>
 	</dependencyManagement>
 
