--- a/apitest/src/main/resources/preReg/SendOtp/SendOtp.yml
+++ b/apitest/src/main/resources/preReg/SendOtp/SendOtp.yml
@@ -2,6 +2,7 @@ SendOtp:
    Prereg_SendOtp_All_Valid_Smoke_Phone_sid:
       endPoint: /preregistration/v1/login/sendOtp/langcode
       role: batch
+      description: Send OTP with a valid phone number on the phone channel
       restMethod: post
       inputTemplate: preReg/SendOtp/sendotp
       outputTemplate: preReg/SendOtp/sendotpResult
@@ -18,6 +19,7 @@ SendOtp:
    Prereg_SendOtp_Invalid_Phone_Neg:
       endPoint: /preregistration/v1/login/sendOtp/langcode
       role: batch
+      description: Send OTP by providing an invalid phone number on the phone channel side
       restMethod: post
       inputTemplate: preReg/SendOtp/sendotp
       outputTemplate: preReg/error
@@ -38,6 +40,7 @@ SendOtp:
    Prereg_SendOtp_MISSING_Phone_Neg:
       endPoint: /preregistration/v1/login/sendOtp/langcode
       role: batch
+      description: Sent OTP without a phone number
       restMethod: post
       inputTemplate: preReg/SendOtp/sendotp
       outputTemplate: preReg/error
@@ -58,6 +61,7 @@ SendOtp:
    Prereg_SendOtp_SpacialCharacter_Val_Phone_Neg:
       endPoint: /preregistration/v1/login/sendOtp/langcode
       role: batch
+      description: Sent OTP with special characters through the phone channel 
       restMethod: post
       inputTemplate: preReg/SendOtp/sendotp
       outputTemplate: preReg/error
@@ -78,6 +82,7 @@ SendOtp:
    Prereg_SendOtp_All_Valid_Smoke_email_sid:
       endPoint: /preregistration/v1/login/sendOtp/langcode
       role: batch
+      description: Send OTP using a valid email address through the email channel
       restMethod: post
       inputTemplate: preReg/SendOtp/sendotp
       outputTemplate: preReg/SendOtp/sendotpResult
@@ -94,6 +99,7 @@ SendOtp:
    Prereg_SendOtp_Invalid__email_Neg:
       endPoint: /preregistration/v1/login/sendOtp/langcode
       role: batch
+      description: Send OTP using an invalid email address via the email channel
       restMethod: post
       inputTemplate: preReg/SendOtp/sendotp
       outputTemplate: preReg/error
@@ -114,6 +120,7 @@ SendOtp:
    Prereg_SendOtp_Missing_email_Neg:
       endPoint: /preregistration/v1/login/sendOtp/langcode
       role: batch
+      description: Sent OTP without an email address via the email channel
       restMethod: post
       inputTemplate: preReg/SendOtp/sendotp
       outputTemplate: preReg/error
@@ -134,6 +141,7 @@ SendOtp:
    Prereg_SendOtp_SpacialCharacter_email_Neg:
       endPoint: /preregistration/v1/login/sendOtp/langcode
       role: batch
+      description: Sent OTP with special characters through the email channel
       restMethod: post
       inputTemplate: preReg/SendOtp/sendotp
       outputTemplate: preReg/error
