--- a/apitest/src/main/resources/preReg/ValidateOtp/ValidateOtp.yml
+++ b/apitest/src/main/resources/preReg/ValidateOtp/ValidateOtp.yml
@@ -2,6 +2,7 @@ ValidateOtp:
    Prereg_ValidateOtp_All_Valid_Smoke_Phone_sid:
       endPoint: /preregistration/v1/login/validateOtp
       role: batch
+      description: Validating OTP with a valid phone number
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/ValidateOtp/validateOtp
@@ -19,6 +20,7 @@ ValidateOtp:
    Prereg_ValidateOtp_Invalid_Phone_Neg:
       endPoint: /preregistration/v1/login/validateOtp
       role: batch
+      description: Validating OTP with an invalid phone number
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/ValidateOtp/validateOtp
@@ -41,6 +43,7 @@ ValidateOtp:
    Prereg_ValidateOtp_SpacialCharacters_Phone_Neg:
       endPoint: /preregistration/v1/login/validateOtp
       role: batch
+      description: Validating OTP with a phone number containing special characters
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/ValidateOtp/validateOtp
@@ -60,9 +63,10 @@ ValidateOtp:
   ]
 }'
 
-   Prereg_SendOtp_All_Valid_Smoke_email_sid:
+   Prereg_ValidateOtp_All_Valid_Smoke_email_sid:
       endPoint: /preregistration/v1/login/validateOtp
       role: batch
+      description: validating OPT with valid email address
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/ValidateOtp/validateOtp
@@ -80,6 +84,7 @@ ValidateOtp:
    Prereg_ValidateOtp_SpacialCharacters_Email_Neg:
       endPoint: /preregistration/v1/login/validateOtp
       role: batch
+      description: Validating OTP with an email address containing special characters
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/ValidateOtp/validateOtp
@@ -101,6 +106,7 @@ ValidateOtp:
    Prereg_ValidateOtp_Invalid_Email_Neg:
       endPoint: /preregistration/v1/login/validateOtp
       role: batch
+      description: Validating OTP with an invalid email address
       checkErrorsOnlyInResponse: true
       restMethod: post
       inputTemplate: preReg/ValidateOtp/validateOtp
