--- a/pre-registration/pre-registration-captcha-service/pom.xml
+++ b/pre-registration/pre-registration-captcha-service/pom.xml
@@ -6,23 +6,23 @@
 	<parent>
 		<groupId>io.mosip.preregistration</groupId>
 		<artifactId>pre-registration-parent</artifactId>
-		<version>1.2.1-java21-SNAPSHOT</version>
+		<version>1.2.1-SNAPSHOT</version>
 	</parent>
 	
 	<groupId>io.mosip.preregistration.captcha</groupId>
 	<artifactId>pre-registration-captcha-service</artifactId>
-	<version>1.2.1-java21-SNAPSHOT</version>
+	<version>1.2.1-SNAPSHOT</version>
 
 	<name>pre-registration-captcha-service</name>
 	<description>A pre-registration service to generate and validate captcha</description>
 	
 	<properties>
 		<!-- Mosip kernel -->
-		<pre.registration.core.version>1.2.1-java21-SNAPSHOT</pre.registration.core.version>
-		<kernel.keymanager.version>1.2.1-java21-SNAPSHOT</kernel.keymanager.version>
-		<kernel.transliteration.icu4j.version>1.2.1-java21-SNAPSHOT</kernel.transliteration.icu4j.version>
-		<kernel.idobjectvalidator.version>1.2.1-java21-SNAPSHOT</kernel.idobjectvalidator.version>
-		<kernel.bom.version>1.2.1-java21-SNAPSHOT</kernel.bom.version>
+		<pre.registration.core.version>1.2.1-SNAPSHOT</pre.registration.core.version>
+		<kernel.keymanager.version>1.2.1-SNAPSHOT</kernel.keymanager.version>
+		<kernel.transliteration.icu4j.version>1.2.1-SNAPSHOT</kernel.transliteration.icu4j.version>
+		<kernel.idobjectvalidator.version>1.2.1-SNAPSHOT</kernel.idobjectvalidator.version>
+		<kernel.bom.version>1.2.1-SNAPSHOT</kernel.bom.version>
 	</properties>
 
 	<dependencyManagement>
