--- a/pre-registration/pom.xml
+++ b/pre-registration/pom.xml
@@ -441,6 +441,31 @@
 							</execution>
 						</executions>
 					</plugin>
+					<plugin>
+						<groupId>pl.project13.maven</groupId>
+						<artifactId>git-commit-id-plugin</artifactId>
+						<version>${git.commit.id.plugin.version}</version>
+						<executions>
+							<execution>
+								<id>get-the-git-infos</id>
+								<goals>
+									<goal>revision</goal>
+								</goals>
+								<phase>validate</phase>
+							</execution>
+						</executions>
+						<configuration>
+							<generateGitPropertiesFile>true</generateGitPropertiesFile>
+							<generateGitPropertiesFilename>
+							${project.build.outputDirectory}/service-git.properties</generateGitPropertiesFilename>
+							<includeOnlyProperties>
+								<includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
+								<includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
+							</includeOnlyProperties>
+							<commitIdGenerationMode>full</commitIdGenerationMode>
+							<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
+						</configuration>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
