--- a/pre-registration/pre-registration-application-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-application-service/src/main/resources/application.properties
@@ -79,7 +79,7 @@ hibernate.show_sql: false
 holiday.exceptional.url: ${mosip.base.url}/v1/masterdata/exceptionalholidays/
 holiday.url: ${mosip.base.url}/v1/masterdata/getregistrationcenterholidays/
 javax.persistence.jdbc.driver: org.postgresql.Driver
-javax.persistence.jdbc.password: aRWP1G52uu
+javax.persistence.jdbc.password: 
 javax.persistence.jdbc.url=jdbc:postgresql://api-internal.dev1.mosip.net:5432/mosip_prereg
 javax.persistence.jdbc.user: postgres
 kernel.auth.contextpath: authmanager
@@ -293,7 +293,7 @@ preregistration.workflow.documentupload: true/false
 qrversion: V1
 regCenter.url: ${mosip.base.url}/v1/masterdata/registrationcenters
 resource.template.url: ${mosip.base.url}/v1/masterdata/templates
-secretKey: lJmGIMqcfgsZiHh9
+secretKey: 
 sendOtp.resource.url: ${mosip.base.url}/v1/authmanager
 server.max-http-request-header-size: 10000000
 sms.acknowledgement.template: SMS-Acknowledgement
@@ -422,7 +422,7 @@ mosip.lostuin.applicationdetails.ara= \u0627\u0644\u062D\u062C\u0632 \u0644\u062
 
 # To generate token from keycloak. Use by kernel auth adapter.
 mosip.iam.adapter.clientid=mosip-prereg-client
-mosip.iam.adapter.clientsecret= lJmGIMqcfgsZiHh9
+mosip.iam.adapter.clientsecret= 
 mosip.iam.adapter.appid=prereg
 
 # URL to get new Auth Token from OIDC provider & to do online validation of auth token with OIDC provider.
