--- a/pre-registration/pre-registration-datasync-service/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-datasync-service/src/main/resources/application.properties
@@ -82,7 +82,7 @@ holiday.url: ${mosip.base.url}/v1/masterdata/getregistrationcenterholidays/
 
 
 javax.persistence.jdbc.driver: org.postgresql.Driver
-javax.persistence.jdbc.password: aRWP1G52uu
+javax.persistence.jdbc.password: 
 javax.persistence.jdbc.url=jdbc:postgresql://api-internal.dev1.mosip.net:5432/mosip_prereg
 javax.persistence.jdbc.user: postgres
 
@@ -380,7 +380,7 @@ preregistration.workflow.documentupload: true/false
 qrversion: V1
 regCenter.url: ${mosip.base.url}/v1/masterdata/registrationcenters
 resource.template.url: ${mosip.base.url}/v1/masterdata/templates
-secretKey: lJmGIMqcfgsZiHh9
+secretKey: 
 sendOtp.resource.url: ${mosip.base.url}/v1/authmanager
 server.max-http-request-header-size: 10000000
 sms.acknowledgement.template: SMS-Acknowledgement
